@@ -19,7 +19,8 @@
 ///////////////////////////////////////////////////////////////////////////////
 namespace boost {
 namespace wave {
-namespace cpp_token_sample {
+namespace cpplexer {
+namespace slex {
 
 ///////////////////////////////////////////////////////////////////////////////
 //  
@@ -74,7 +75,8 @@ struct slex_input_interface
 };
 
 ///////////////////////////////////////////////////////////////////////////////
-}   // namespace cpp_token_sample
+}   // namespace slex
+}   // namespace cpplexer
 }   // namespace wave
 }   // namespace boost 
 
